2009-01-12  Michael Riepe  <too-tired@users.sourceforge.net>

	* INSTALL:
	* makefile.in:
		Add and document `dep' target.

2009-01-12  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/stream.h:
		Fix "impossible bitrate constraints" error
		from external ffmpeg.

2009-01-11  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
	* src/dvbcut.h:
	* src/dvbcutbase.ui:
		Add Zoom in/out function.

2009-01-10  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/dvbcut.cpp:
		Handle left/right key events.
		Make mouse wheel work in video window.

2009-01-08  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

        * src/settings.cpp:
                Fixed bug with output pipe directory/file names
                containing spaces (added quotes).

        * src/dvbcutbase.ui:
        * src/dvbcut.cpp:
        * src/dvbcut.h:
        * src/avframe.cpp:
        * src/avframe.h:
        * src/imageprovider.cpp:
        * src/imageprovider.h:
        * src/differenceimageprovider.cpp:
        * src/differenceimageprovider.h:
        * src/settings.cpp:
        * src/settings.h:
                viewscalefactor can now be any positive float,  
                and implemented "Custem size" viewing scale.

2009-01-07  Michael Riepe  <too-tired@users.sourceforge.net>

	* configure.in:
		Add --with-qt3-include and --with-qt3-lib options.

	* makefile.in:
	* src/Makefile.in:
		Use $(DESTDIR).
 
2009-01-07  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* INSTALL:
		Updated dependencies and build instructions.

2008-10-31  Wolfram Gloger  <video06@malloc.de>  (mr)

	* src/lavfmuxer.cpp:
		Use avcodec_decode_audio2 with newer ffmpeg.

	* src/avframe.cpp:
		Replace img_copy with av_picture_copy for newer ffmpeg.

	* configure.in:
		Add -I.../include/qt3 to CPPFLAGS.

2008-10-26  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/index.cpp:
		Fix writing of new index format.

2008-10-19  Michael Riepe  <too-tired@users.sourceforge.net>
